<resources>
    <string name="app_name">Sign Up</string>
    <string name="email">email</string>
    <string name="password">Password</string>
    <string name="login">LogIn</string>
    <string name="or">or</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="location">Location</string>
    <string name="mobile">Mobile</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="signout">SignOut</string>
</resources>