<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="329dp"
        android:layout_height="121dp"
        android:layout_marginStart="41dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="41dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/insta" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"
            android:padding="12dp"
            android:ems="10"
            android:background="@drawable/text_plan"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
             />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="12dp"
            android:background="@drawable/text_plan"
            android:singleLine="false" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="20dp"
            android:text="@string/forgot_password"
            android:textColor="#003CD6" />

        <Button

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:backgroundTint="#0963BA"
            android:onClick="logInUser"
            android:text="@string/login"
            app:cornerRadius="5dp" />
    </LinearLayout>

    <View
        android:id="@+id/view2"
        android:layout_width="150dp"
        android:layout_height="1dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:background="#7A7676"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/or"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/view3"
        app:layout_constraintStart_toEndOf="@+id/view2"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <View
        android:id="@+id/view3"
        android:layout_width="150dp"
        android:layout_height="1dp"
        android:layout_marginStart="228dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:background="#7A7676"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="24dp"
        android:text="@string/don_t_have_an_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/view2"
        app:layout_constraintVertical_bias="0.502" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="116dp"
        android:layout_marginBottom="24dp"
        android:text="@string/sign_in"
        android:onClick="signInUser"
        android:textColor="#032BF4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view3"
        app:layout_constraintVertical_bias="0.502" />


</androidx.constraintlayout.widget.ConstraintLayout>