<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SginInAtivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="329dp"
        android:layout_height="121dp"
        android:layout_marginStart="41dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="41dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/insta" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"
            android:padding="12dp"
            android:ems="10"
            android:background="@drawable/text_plan"
            android:hint="@string/email"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/etMobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"
            android:padding="12dp"
            android:ems="10"
            android:background="@drawable/text_plan"
            android:hint="@string/mobile"
            android:inputType="number" />
        <EditText
            android:id="@+id/etLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"
            android:padding="12dp"
            android:ems="10"
            android:background="@drawable/text_plan"
            android:hint="@string/location"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="12dp"
            android:background="@drawable/text_plan"
            android:singleLine="false" />


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:backgroundTint="#0963BA"
            android:onClick="SignInUser"
            android:text="@string/sign_in"
            app:cornerRadius="5dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>